Added navigation basic functionality on mobile and desktop and added a search input

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,5 +1,5 @@
 $Purple: #cdb4db;
 $Light-pink: #ffc8dd;
 $Pink: #ffafcc;
-$Light-blue: #DBE0FE;
-$Blue: #A2D2ff;
+$Light-blue: #dbe0fe;
+$Blue: #a2d2ff;
