--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,271 @@
+.navbar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  height: 75px;
+  padding: 0;
+  z-index: 100;
+  background-color: #ffafcc;
+}
+
+.nav {
+  font-weight: bold;
+  z-index: 100;
+}
+
+.nav-btn {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  background-color: transparent;
+  padding: 0.5em;
+  cursor: pointer;
+}
+.nav-btn i {
+  font-size: 40px;
+}
+
+.nav-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  height: 100%;
+  transform: translate(0%, -50%);
+  font-size: 2.6rem;
+  font-weight: bold;
+}
+.nav-logo__picture {
+  width: 30px;
+  height: 30px;
+}
+.nav-logo__text {
+  margin-left: 0.5em;
+  text-align: center;
+}
+
+.nav-menu {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  height: 100vh;
+  width: 70%;
+  transition: left 0.3s;
+  background-color: #ffafcc;
+  font-size: 1.2rem;
+  z-index: 99999;
+  overflow: auto;
+}
+.nav-menu--active {
+  left: 0;
+}
+.nav-menu a {
+  text-decoration: none;
+  color: black;
+}
+.nav-menu li {
+  list-style: none;
+}
+.nav-menu__text {
+  display: inline-block;
+  position: absolute;
+  top: 75px;
+  width: 100%;
+  padding-bottom: 0.5em;
+  border-bottom: 2px solid black;
+  text-align: center;
+  transform: translateY(-100%);
+  font-size: 2.4rem;
+}
+.nav-menu__btn {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  z-index: 9999;
+  background-color: transparent;
+  border: none;
+}
+.nav-menu__btn i {
+  font-size: 3rem;
+}
+.nav-menu__categories, .nav-menu__account {
+  padding: 2em 1em;
+  font-size: 2rem;
+}
+.nav-menu__categories li, .nav-menu__account li {
+  margin: 1.5em 0;
+}
+.nav-menu__categories {
+  padding-top: 75px;
+}
+.nav-menu__category .dropdown {
+  padding: 0.5em;
+  display: none;
+  background-color: #f799bb;
+}
+.nav-menu__category .dropdown--active {
+  display: block;
+}
+.nav-menu__category .arrow {
+  position: absolute;
+  right: 5%;
+}
+
+@media (max-width: 320px) {
+  .nav-btn i {
+    font-size: 30px;
+  }
+}
+@media (min-width: 996px) {
+  .nav {
+    position: relative;
+  }
+  .nav-btn {
+    display: none;
+  }
+  .nav-logo {
+    left: 5%;
+  }
+  .nav-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    top: 50%;
+    left: unset;
+    right: 0;
+    height: 75px;
+    transform: translate(0%, -50%);
+    overflow: unset;
+  }
+  .nav-menu__text {
+    display: none;
+  }
+  .nav-menu__btn {
+    display: none;
+  }
+  .nav-menu__categories, .nav-menu__account {
+    display: flex;
+  }
+  .nav-menu__categories {
+    width: 70%;
+    justify-content: space-around;
+    padding-top: 2em;
+  }
+  .nav-menu__categories li {
+    margin: 0;
+  }
+  .nav-menu__category {
+    position: relative;
+    line-height: 75px;
+    width: 25%;
+    transition: background-color 0.15s;
+    font-size: 1.6rem;
+    text-align: center;
+    cursor: pointer;
+  }
+  .nav-menu__category .dropdown {
+    position: absolute;
+    top: 75px;
+    min-width: 100%;
+    padding: 0;
+    background-color: #fff;
+    bottom: none;
+  }
+  .nav-menu__category .dropdown li {
+    border-bottom: 0.2px solid black;
+    margin: auto 0;
+    padding: 0 0.5em;
+    text-align: left;
+    transition: background-color 0.3s;
+  }
+  .nav-menu__category .dropdown li:hover {
+    background-color: #c2c0c0;
+  }
+  .nav-menu__category:hover .dropdown {
+    display: block;
+    animation: dropdown-animation 0.15s;
+  }
+  .nav-menu__category:hover {
+    background-color: #f895b9;
+  }
+  .nav-menu__category .arrow {
+    display: none;
+  }
+  .nav-menu__account {
+    font-size: 1.6rem;
+    padding: 0;
+    height: 100%;
+    line-height: 75px;
+  }
+  .nav-menu__account li {
+    height: 100%;
+    padding: 0 1em;
+    margin: 0;
+    transition: background-color 0.15s;
+    cursor: pointer;
+  }
+  .nav-menu__account li:hover {
+    background-color: #f895b9;
+  }
+}
+.nav-search {
+  position: absolute;
+  left: 50%;
+  top: 75px;
+  width: 100%;
+  transform: translateX(-50%);
+}
+.nav-search__input {
+  position: absolute;
+  left: 50%;
+  height: 40px;
+  width: 90%;
+  transform: translateX(-50%);
+  padding: 1em;
+  margin-top: 0.5em;
+  border: 1px solid black;
+  outline: none;
+}
+.nav-search__input:focus {
+  box-shadow: 0 0 6px 1px rgba(136, 136, 136, 0.4745098039);
+}
+.nav-search__btn {
+  position: absolute;
+  top: 0.5em;
+  left: 85%;
+  height: 40px;
+  width: 10%;
+  border: 1px solid black;
+  border-left: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+@keyframes dropdown-animation {
+  from {
+    opacity: 0;
+    transform: scale(0.2);
+  }
+  40% {
+    opacity: 0.2;
+    transform: scale(0.4);
+  }
+  60% {
+    opacity: 0.6;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -9,10 +277,30 @@ html {
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
+  color: black;
   font-family: "Comfortaa", cursive;
-  background-color: #DBE0FE;
-  color: white;
 }
-body h1 {
-  font-size: 20rem;
+
+.remove-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+.blur {
+  display: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  background-color: rgba(150, 19, 19, 0.215);
+}
+
+.wrapper {
+  height: 100%;
+  width: 95%;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
 }/*# sourceMappingURL=main.css.map */
