--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'header';
 
 * {
 	margin: 0;
@@ -9,10 +10,27 @@ html {
 	font-size: 62.5%;
 }
 body {
+	width: 100vw;
+	height: 100vh;
+	color: black;
 	font-family: 'Comfortaa', cursive;
-	background-color: $Light-blue;
-	color: white;
-	h1 {
-		font-size: 20rem;
-	}
+}
+.remove-scrolling {
+	height: 100%;
+	overflow: hidden;
+}
+.blur {
+	display: none;
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	z-index: 100;
+	background-color: rgba(150, 19, 19, 0.215);
+}
+.wrapper {
+	height: 100%;
+	width: 95%;
+	max-width: 1200px;
+	margin-right: auto;
+	margin-left: auto;
 }
