--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.header {
+  height: 500px;
+}
+
 .navbar {
   position: sticky;
   top: 0;
@@ -117,6 +121,96 @@
   right: 5%;
 }
 
+.nav-search {
+  position: absolute;
+  left: 50%;
+  top: 75px;
+  width: 100%;
+  transform: translateX(-50%);
+  opacity: 1;
+}
+.nav-search__input {
+  position: absolute;
+  left: 50%;
+  height: 40px;
+  width: 90%;
+  transform: translateX(-50%);
+  padding: 1em;
+  margin-top: 1em;
+  border: 1px solid black;
+  border-radius: 10px;
+  outline: none;
+}
+.nav-search__input:focus {
+  box-shadow: 0 0 6px 1px rgba(136, 136, 136, 0.4745098039);
+}
+.nav-search__btn {
+  position: absolute;
+  top: 1em;
+  left: 85%;
+  height: 40px;
+  width: 10%;
+  border: 1px solid black;
+  border-left: none;
+  border-radius: 0 10px 10px 0;
+  background-color: white;
+  cursor: pointer;
+}
+
+.heading {
+  position: absolute;
+  top: 150px;
+}
+.heading__text {
+  font-size: 4rem;
+  text-align: center;
+}
+.heading__text span {
+  color: #cdb4db;
+}
+
+.slider-container {
+  position: absolute;
+  top: 300px;
+  left: 50%;
+  width: 90%;
+  max-height: 150px;
+  transform: translateX(-50%);
+  margin-top: 0.5em;
+  border-radius: 10px;
+  box-shadow: 0 0 6px 1px gray;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+}
+.slider__picture {
+  width: 100%;
+  height: auto;
+}
+.slider__prev-btn, .slider__next-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 10em 0;
+}
+.slider__prev-btn i, .slider__next-btn i {
+  color: #fff;
+  opacity: 0.5;
+}
+.slider__prev-btn {
+  left: 10px;
+}
+.slider__next-btn {
+  right: 10px;
+}
+
 @media (max-width: 320px) {
   .nav-btn i {
     font-size: 30px;
@@ -130,7 +224,8 @@
     display: none;
   }
   .nav-logo {
-    left: 5%;
+    left: 0%;
+    margin-left: 1em;
   }
   .nav-menu {
     display: flex;
@@ -215,39 +310,6 @@
     background-color: #f895b9;
   }
 }
-.nav-search {
-  position: absolute;
-  left: 50%;
-  top: 75px;
-  width: 100%;
-  transform: translateX(-50%);
-}
-.nav-search__input {
-  position: absolute;
-  left: 50%;
-  height: 40px;
-  width: 90%;
-  transform: translateX(-50%);
-  padding: 1em;
-  margin-top: 0.5em;
-  border: 1px solid black;
-  outline: none;
-}
-.nav-search__input:focus {
-  box-shadow: 0 0 6px 1px rgba(136, 136, 136, 0.4745098039);
-}
-.nav-search__btn {
-  position: absolute;
-  top: 0.5em;
-  left: 85%;
-  height: 40px;
-  width: 10%;
-  border: 1px solid black;
-  border-left: none;
-  background-color: white;
-  cursor: pointer;
-}
-
 @keyframes dropdown-animation {
   from {
     opacity: 0;
@@ -266,6 +328,69 @@
     transform: scale(1);
   }
 }
+.news {
+  position: absolute;
+  top: 500px;
+  width: 100%;
+  height: 500px;
+  background-color: #ffc8dd;
+}
+.news__heading {
+  margin-top: 1em;
+  text-transform: uppercase;
+  font-size: 3rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.news-slider-container {
+  position: absolute;
+  top: calc(100px + 1em);
+  left: 50%;
+  width: 90%;
+  max-height: 250px;
+  transform: translateX(-50%);
+  margin-top: 0.5em;
+  border-radius: 10px;
+  box-shadow: 0 0 6px 1px gray;
+  overflow: hidden;
+}
+.news-slider-container .slider {
+  display: flex;
+  position: absolute;
+  height: 100%;
+}
+.news-slider-container .slider__slide {
+  display: flex;
+  justify-content: space-around;
+  min-width: 100%;
+  height: 100%;
+}
+.news-slider-container .slider__picture {
+  width: 40%;
+  height: 40%;
+  margin-top: 20px;
+}
+.news-slider-container .slider .product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
+}
+.news-slider-container .slider .product-info__description {
+  width: 80%;
+  text-align: center;
+}
+.news-slider-container .slider .product-info__price {
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+.news-slider-container .slider .product-info__name {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -277,6 +402,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   color: black;
