--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'colors';
 @import 'header';
+@import 'news-section';
 
 * {
 	margin: 0;
@@ -10,6 +11,8 @@ html {
 	font-size: 62.5%;
 }
 body {
+	display: flex;
+	flex-direction: column;
 	width: 100vw;
 	height: 100vh;
 	color: black;
