--- a/src/scss/_news-section.scss
+++ b/src/scss/_news-section.scss
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 500px;
 	width: 100%;
-	height: 500px;
+	height: 400px;
 	background-color: #ffc8dd;
 	&__heading {
 		margin-top: 1em;
@@ -15,29 +15,30 @@
 .news-slider-container {
 	// make mixin
 	position: absolute;
-	top: calc(100px + 1em);
+	top: calc(70px + 1em);
 	left: 50%;
 	width: 90%;
 	max-height: 250px;
 	transform: translateX(-50%);
 	margin-top: 0.5em;
+	border: none;
 	border-radius: 10px;
-	box-shadow: 0 0 6px 1px gray;
+	// box-shadow: 0 0 6px 1px gray;
 	overflow: hidden;
 
 	.slider {
 		display: flex;
 		position: absolute;
-    height: 100%;
+		height: 100%;
 		&__slide {
 			display: flex;
 			justify-content: space-around;
 			min-width: 100%;
-      height: 100%;
+			height: 100%;
 		}
 		&__picture {
-			width: 40%;
-			height: 40%;
+			width: 75%;
+			height: 55%;
 			margin-top: 20px;
 		}
 		.product-info {
@@ -46,10 +47,6 @@
 			align-items: center;
 			justify-content: space-around;
 			width: 50%;
-			&__description {
-				width: 80%;
-				text-align: center;
-			}
 			&__price {
 				font-weight: bold;
 				font-size: 1.6rem;
@@ -57,6 +54,40 @@
 			&__name {
 				font-weight: bold;
 				font-size: 1.8rem;
+			}
+		}
+	}
+}
+@media (max-width: 320px) {
+	.news-slider-container {
+		.slider {
+			.product-info {
+				&__name {
+					font-size: 1.6rem;
+				}
+			}
+		}
+	}
+}
+@media (min-width: 768px) {
+	.news {
+		top: 700px;
+		height: 400px;
+	}
+	.news-slider-container {
+		max-height: 250px;
+		.slider {
+			&__slide {
+				min-width: 70%;
+			}
+			.product-info {
+				width: 30%;
+				&__name {
+					font-size: 1.8rem;
+				}
+				&__price {
+					font-size: 2rem;
+				}
 			}
 		}
 	}
