--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .header {
-  height: 500px;
+  height: 550px;
 }
 
 .navbar {
@@ -34,7 +34,7 @@
 .nav-logo {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   position: absolute;
   left: 5%;
   top: 50%;
@@ -44,8 +44,8 @@
   font-weight: bold;
 }
 .nav-logo__picture {
-  width: 30px;
-  height: 30px;
+  width: 230px;
+  height: 70%;
 }
 .nav-logo__text {
   margin-left: 0.5em;
@@ -62,9 +62,9 @@
   width: 70%;
   transition: left 0.3s;
   background-color: #ffafcc;
-  font-size: 1.2rem;
   z-index: 99999;
   overflow: auto;
+  font-size: 1.2rem;
 }
 .nav-menu--active {
   left: 0;
@@ -85,7 +85,6 @@
   border-bottom: 2px solid black;
   text-align: center;
   transform: translateY(-100%);
-  font-size: 2.4rem;
 }
 .nav-menu__btn {
   position: absolute;
@@ -174,7 +173,7 @@
   top: 300px;
   left: 50%;
   width: 90%;
-  max-height: 150px;
+  max-height: 200px;
   transform: translateX(-50%);
   margin-top: 0.5em;
   border-radius: 10px;
@@ -189,7 +188,7 @@
   text-align: center;
 }
 .slider__picture {
-  width: 100%;
+  min-width: 100%;
 }
 .slider__prev-btn, .slider__next-btn {
   position: absolute;
@@ -224,6 +223,9 @@
   .header {
     height: 700px;
   }
+  .navbar {
+    height: 90px;
+  }
   .heading {
     top: 170px;
     left: 50%;
@@ -235,12 +237,25 @@
   .heading__text span {
     font-size: 7rem;
   }
+  .nav-search {
+    top: 90px;
+  }
+  .nav-logo__picture {
+    width: 400px;
+    height: 80%;
+  }
+  .nav-menu {
+    font-size: 4rem;
+  }
+  .nav-menu__text {
+    top: 90px;
+  }
+  .nav-menu__categories, .nav-menu__account {
+    font-size: 3.2rem;
+  }
   .slider-container {
     top: 380px;
-    max-height: 250px;
-  }
-  .slider__picture {
-    min-width: 100%;
+    max-height: 300px;
   }
 }
 @media (min-width: 996px) {
@@ -357,7 +372,7 @@
 }
 .news {
   position: absolute;
-  top: 500px;
+  top: 550px;
   width: 100%;
   height: 400px;
   background-color: #ffc8dd;
@@ -421,7 +436,7 @@
 }
 @media (min-width: 768px) {
   .news {
-    top: 700px;
+    top: 750px;
     height: 400px;
   }
   .news-slider-container {
