--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .header {
-  height: 550px;
+  height: 600px;
 }
 
 .navbar {
@@ -64,7 +64,7 @@
   background-color: #ffafcc;
   z-index: 99999;
   overflow: auto;
-  font-size: 1.2rem;
+  font-size: 2rem;
 }
 .nav-menu--active {
   left: 0;
@@ -120,45 +120,9 @@
   right: 5%;
 }
 
-.nav-search {
-  position: absolute;
-  left: 50%;
-  top: 75px;
-  width: 100%;
-  transform: translateX(-50%);
-  opacity: 1;
-}
-.nav-search__input {
-  position: absolute;
-  left: 50%;
-  height: 40px;
-  width: 90%;
-  transform: translateX(-50%);
-  padding: 1em;
-  margin-top: 1em;
-  border: 1px solid black;
-  border-radius: 10px;
-  outline: none;
-}
-.nav-search__input:focus {
-  box-shadow: 0 0 6px 1px rgba(136, 136, 136, 0.4745098039);
-}
-.nav-search__btn {
-  position: absolute;
-  top: 1em;
-  left: 85%;
-  height: 40px;
-  width: 10%;
-  border: 1px solid black;
-  border-left: none;
-  border-radius: 0 10px 10px 0;
-  background-color: white;
-  cursor: pointer;
-}
-
 .heading {
   position: absolute;
-  top: 150px;
+  top: 420px;
 }
 .heading__text {
   font-size: 4rem;
@@ -170,21 +134,19 @@
 
 .slider-container {
   position: absolute;
-  top: 300px;
+  top: 140px;
   left: 50%;
-  width: 90%;
-  max-height: 200px;
+  min-width: 100%;
+  max-height: 250px;
   transform: translateX(-50%);
   margin-top: 0.5em;
-  border-radius: 10px;
-  box-shadow: 0 0 6px 1px gray;
   overflow: hidden;
 }
 
 .slider {
   display: flex;
   transition: transform 0.3s ease-in-out;
-  max-height: 100%;
+  min-height: 100%;
   text-align: center;
 }
 .slider__picture {
@@ -219,12 +181,13 @@
     font-size: 3.4rem;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .header {
     height: 700px;
   }
-  .navbar {
-    height: 90px;
+  .slider-container {
+    top: 380px;
+    max-height: 300px;
   }
   .heading {
     top: 170px;
@@ -232,13 +195,21 @@
     transform: translateX(-50%);
   }
   .heading__text {
+    font-size: 4rem;
+  }
+  .heading__text span {
+    font-size: 6rem;
+  }
+}
+@media (min-width: 768px) {
+  .navbar {
+    height: 90px;
+  }
+  .heading__text {
     font-size: 4.4rem;
   }
   .heading__text span {
-    font-size: 7rem;
-  }
-  .nav-search {
-    top: 90px;
+    font-size: 8rem;
   }
   .nav-logo__picture {
     width: 400px;
@@ -252,10 +223,6 @@
   }
   .nav-menu__categories, .nav-menu__account {
     font-size: 3.2rem;
-  }
-  .slider-container {
-    top: 380px;
-    max-height: 300px;
   }
 }
 @media (min-width: 996px) {
@@ -370,9 +337,33 @@
     transform: scale(1);
   }
 }
+.actions {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  top: 75px;
+  width: 100%;
+  height: 50px;
+  border-radius: 0 0 30% 30%;
+  background-color: #f895b9;
+}
+.actions__account, .actions__search, .actions__basket {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 33%;
+  height: 50px;
+  font-size: 30px;
+}
+.actions__search, .actions__account {
+  border-right: 1px solid black;
+}
+
 .news {
   position: absolute;
-  top: 550px;
+  top: 600px;
   width: 100%;
   height: 400px;
   background-color: #ffc8dd;
@@ -434,11 +425,13 @@
     font-size: 1.6rem;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .news {
     top: 750px;
     height: 400px;
   }
+}
+@media (min-width: 768px) {
   .news-slider-container {
     max-height: 250px;
   }
