--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
-	height: 550px;
+	height: 600px;
 }
 .navbar {
 	position: sticky;
@@ -59,7 +59,7 @@
 	background-color: $Pink;
 	z-index: 99999;
 	overflow: auto;
-	font-size: 1.2rem;
+	font-size: 2rem;
 	&--active {
 		left: 0;
 	}
@@ -117,46 +117,9 @@
 		}
 	}
 }
-
-.nav-search {
-	position: absolute;
-	left: 50%;
-	top: 75px;
-	width: 100%;
-	transform: translateX(-50%);
-	opacity: 1;
-	&__input {
-		position: absolute;
-		left: 50%;
-		height: 40px;
-		width: 90%;
-		transform: translateX(-50%);
-		padding: 1em;
-		margin-top: 1em;
-		border: 1px solid black;
-		border-radius: 10px;
-		outline: none;
-		&:focus {
-			box-shadow: 0 0 6px 1px #88888879;
-		}
-	}
-	&__btn {
-		position: absolute;
-		top: 1em;
-		left: 85%;
-		height: 40px;
-		width: 10%;
-		border: 1px solid black;
-		border-left: none;
-		border-radius: 0 10px 10px 0;
-		background-color: white;
-		cursor: pointer;
-	}
-}
-
 .heading {
 	position: absolute;
-	top: 150px;
+	top: 420px;
 	// background-color: aqua;
 	&__text {
 		font-size: 4rem;
@@ -169,20 +132,20 @@
 
 .slider-container {
 	position: absolute;
-	top: 300px;
+	top: 140px;
 	left: 50%;
-	width: 90%;
-	max-height: 200px;
+	min-width: 100%;
+	max-height: 250px;
 	transform: translateX(-50%);
 	margin-top: 0.5em;
-	border-radius: 10px;
-	box-shadow: 0 0 6px 1px gray;
+	// border-radius: 10px;
+	// box-shadow: 0 0 6px 1px gray;
 	overflow: hidden;
 }
 .slider {
 	display: flex;
 	transition: transform 0.3s ease-in-out;
-	max-height: 100%;
+	min-height: 100%;
 	text-align: center;
 	&__picture {
 		min-width: 100%;
@@ -222,13 +185,13 @@
 		}
 	}
 }
-
-@media (min-width: 768px) {
+@media (min-width: 576px) {
 	.header {
 		height: 700px;
 	}
-	.navbar {
-		height: 90px;
+	.slider-container {
+		top: 380px;
+		max-height: 300px;
 	}
 	.heading {
 		top: 170px;
@@ -236,13 +199,24 @@
 		transform: translateX(-50%);
 		&__text {
 			span {
-				font-size: 7rem;
+				font-size: 6rem;
+			}
+			font-size: 4rem;
+		}
+	}
+}
+
+@media (min-width: 768px) {
+	.navbar {
+		height: 90px;
+	}
+	.heading {
+		&__text {
+			span {
+				font-size: 8rem;
 			}
 			font-size: 4.4rem;
 		}
-	}
-	.nav-search {
-		top: 90px;
 	}
 	.nav-logo {
 		&__picture {
@@ -259,10 +233,6 @@
 		&__account {
 			font-size: 3.2rem;
 		}
-	}
-	.slider-container {
-		top: 380px;
-		max-height: 300px;
 	}
 }
 
@@ -383,3 +353,29 @@
 }
 ///////////////////////////////
 ///
+.actions {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	left: 0;
+	top: 75px;
+	width: 100%;
+	height: 50px;
+	border-radius: 0 0 30% 30%;
+	background-color: #f895b9;
+	&__account,
+	&__search,
+	&__basket {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 33%;
+		height: 50px;
+		font-size: 30px;
+	}
+	&__search,
+	&__account {
+		border-right: 1px solid black;
+	}
+}
