--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -91,8 +91,7 @@
 			font-size: 3rem;
 		}
 	}
-	&__categories,
-	&__account {
+	&__categories {
 		padding: 2em 1em;
 		font-size: 2rem;
 		li {
@@ -117,6 +116,77 @@
 		}
 	}
 }
+
+.actions {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	left: 0;
+	top: 75px;
+	width: 100%;
+	height: 50px;
+	border-radius: 0 0 30% 30%;
+	background-color: #f895b9;
+	transition: border-radius 0.1s;
+	&__account,
+	&__search,
+	&__basket {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		opacity: 1;
+		width: 33%;
+		height: 50px;
+		font-size: 30px;
+		&--hide {
+			display: none;
+		}
+	}
+	&__search,
+	&__account {
+		border-right: 1px solid black;
+	}
+	&__search {
+		&--active {
+			justify-content: unset;
+			border: none;
+			width: 100%;
+			i {
+				position: absolute;
+				animation: search-button-animation 0.4s linear forwards;
+				z-index: 999;
+				width: 40px;
+				text-align: right;
+				background-color: #f799bb;
+			}
+		}
+	}
+	&__search-input {
+		display: none;
+		position: absolute;
+		left: 5%;
+		width: 0;
+		padding: 1em;
+		font-size: 1.6rem;
+		&--active {
+			animation: search-input-animation 0.4s linear forwards;
+			display: block;
+			width: 90%;
+			height: 40px;
+			z-index: 100;
+			background-color: #f799bb;
+			border: none;
+			border-bottom: 1px solid black;
+			&:focus {
+				outline: none;
+				border-radius: 5px;
+				box-shadow: 0 0 0 2px rgba(134, 20, 119, 0.5);
+			}
+		}
+	}
+}
+
 .heading {
 	position: absolute;
 	top: 420px;
@@ -138,8 +208,6 @@
 	max-height: 250px;
 	transform: translateX(-50%);
 	margin-top: 0.5em;
-	// border-radius: 10px;
-	// box-shadow: 0 0 6px 1px gray;
 	overflow: hidden;
 }
 .slider {
@@ -210,6 +278,9 @@
 	.navbar {
 		height: 90px;
 	}
+	.actions {
+		top: 90px;
+	}
 	.heading {
 		&__text {
 			span {
@@ -219,9 +290,10 @@
 		}
 	}
 	.nav-logo {
+		line-height: 90px;
 		&__picture {
-			width: 400px;
-			height: 80%;
+			width: 350px;
+			height: 70%;
 		}
 	}
 	.nav-menu {
@@ -229,8 +301,7 @@
 		&__text {
 			top: 90px;
 		}
-		&__categories,
-		&__account {
+		&__categories {
 			font-size: 3.2rem;
 		}
 	}
@@ -256,6 +327,7 @@
 		left: unset;
 		right: 0;
 		height: 75px;
+		transition: unset;
 		transform: translate(0%, -50%);
 		overflow: unset;
 		&__text {
@@ -264,8 +336,7 @@
 		&__btn {
 			display: none;
 		}
-		&__categories,
-		&__account {
+		&__categories {
 			display: flex;
 		}
 		&__categories {
@@ -313,22 +384,6 @@
 				display: none;
 			}
 		}
-		&__account {
-			font-size: 1.6rem;
-			padding: 0;
-			height: 100%;
-			line-height: 75px;
-			li {
-				height: 100%;
-				padding: 0 1em;
-				margin: 0;
-				transition: background-color 0.15s;
-				cursor: pointer;
-				&:hover {
-					background-color: #f895b9;
-				}
-			}
-		}
 	}
 }
 
@@ -351,31 +406,138 @@
 		transform: scale(1);
 	}
 }
-///////////////////////////////
-///
-.actions {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	left: 0;
-	top: 75px;
-	width: 100%;
-	height: 50px;
-	border-radius: 0 0 30% 30%;
-	background-color: #f895b9;
-	&__account,
-	&__search,
-	&__basket {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 33%;
-		height: 50px;
-		font-size: 30px;
+
+@keyframes search-input-animation {
+	from {
+		opacity: 0.1;
+		width: 0;
 	}
-	&__search,
-	&__account {
-		border-right: 1px solid black;
+	25% {
+		opacity: 0.4;
+		width: 35%;
+	}
+	50% {
+		opacity: 0.7;
+		width: 65%;
+	}
+	to {
+		opacity: 1;
+		width: 90%;
 	}
 }
+@keyframes search-button-animation {
+	from {
+		opacity: 0.1;
+		left: 5%;
+	}
+	25% {
+		opacity: 0.4;
+		left: 35%;
+	}
+	50% {
+		opacity: 0.7;
+		left: 65%;
+	}
+	to {
+		opacity: 1;
+		left: calc(95% - 45px);
+	}
+}
+@keyframes search-button-animation-rev {
+	from {
+		opacity: 1;
+		left: calc(95% - 45px);
+	}
+	25% {
+		left: 65%;
+	}
+	50% {
+		left: 35%;
+	}
+	to {
+		opacity: 1;
+		left: 5%;
+	}
+}
+@keyframes actions-bar-animation {
+	from {
+		border-radius: 0 0 30% 30%;
+	}
+	50% {
+		border-radius: 0 0 15% 15%;
+	}
+	to {
+		border-radius: 0;
+	}
+}
+
+///////////////////////////////
+///
+// .actions {
+// 	position: absolute;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	left: 0;
+// 	top: 75px;
+// 	width: 100%;
+// 	height: 50px;
+// 	border-radius: 0 0 30% 30%;
+// 	background-color: #f895b9;
+// 	transition: border-radius 0.1s;
+// 	&__account,
+// 	&__search,
+// 	&__basket {
+// 		display: flex;
+// 		align-items: center;
+// 		justify-content: center;
+// 		width: 33%;
+// 		height: 50px;
+// 		font-size: 30px;
+// 		&--hide {
+// 			display: none;
+// 		}
+// 	}
+// 	&__search,
+// 	&__account {
+// 		border-right: 1px solid black;
+// 	}
+// 	&__search {
+// 		&--active {
+// 			justify-content: unset;
+// 			border: none;
+// 			width: 100%;
+// 			i {
+// 				position: absolute;
+// 				animation: search-button-animation 0.4s linear forwards;
+// 				z-index: 999;
+// 				width: 40px;
+// 				text-align: right;
+// 				background-color: #f799bb;
+// 			}
+// 		}
+// 	}
+// 	&__search-input {
+// 		display: none;
+// 		position: absolute;
+// 		left: 5%;
+// 		width: 0;
+// 		padding: 1em;
+// 		font-size: 1.6rem;
+// 		&--active {
+// 			animation: search-input-animation 0.4s linear forwards;
+// 			display: block;
+// 			width: 90%;
+// 			height: 40px;
+// 			z-index: 100;
+// 			background-color: #f799bb;
+// 			border: none;
+// 			border-bottom: 1px solid black;
+// 			&:focus {
+// 				outline: none;
+// 				border-radius: 5px;
+// 				box-shadow: 0 0 0 2px rgba(134, 20, 119, 0.5);
+// 			}
+// 		}
+// 	}
+// }
